--- a/Grep6/inde.html
+++ b/Grep6/inde.html
@@ -123,8 +123,8 @@
 もし指定された考察事項がなければ，個人作成課題に考察を書けばよい．
 -->
 
-グループ１では前回の課題からGitHubを使っていました。
-進捗管理はLINEで、成果物共有はGitHubを使って共有していました。
+グループ１では前回の課題からGitHubを使っていた。
+進捗管理はLINEで、成果物共有はGitHubを使って共有していた。
 コンフリクトが起きないように、
 各自が担当するプログラムを別々にしたり、
 同一のプログラムを担当する場合、実際に集まって作業をしたりした。
