--- a/Grep6/inde.html
+++ b/Grep6/inde.html
@@ -78,14 +78,14 @@
 <h2>課題</h2>
 <!-- 課題を書く．-->
 
-
+<pre>
     [必須課題6-1] CarShop.data を実際的な応用事例に書き換えて，前向き推論，および後ろ向き推論に基づく質問応答システムを作成せよ（教科書p.132 練習問題1）．
 
     [発展課題6-2] 上記6-1で実装した質問応答システムのGUIを作成せよ．
     質問応答だけでなく，ルールの編集（追加，削除，変更）などについてもGUIで行えるようにせよ．
 
     [発展課題6-3] グループでの進捗管理や成果物共有などについて，工夫した点や使ったツールについて，グループ作成書類で考察しなさい．
-
+</pre>
 <h3>独自仕様の説明</h3>
 <!--
  もし自分で独自に決めた仕様があれば，その説明を書く．
