--- a/Grep6/inde.html
+++ b/Grep6/inde.html
@@ -88,7 +88,8 @@
 <!--
  もし自分で独自に決めた仕様があれば，その説明を書く．
 -->
-
+GUIでは、フレームの大きさに合わせてテキストエリアの大きさが変わるようにした。タブで質問と編集を分け、質問ページには前向き後ろ向きの質問ボタンを付けた。
+編集ページにはルールとワーキングメモリをボタンで切り替えられるようになっている。
 
 <h3>プログラムの構造</h3>
 <!--  どのような設計をしたか．-->
